tdf#120574 Store Ascii Options for Later Saving

store auto detected/configured ascii options in medium.
use stored ascii settings for saving and text encoding
settings dialog.

Change-Id: I88e2d54923bfcf5d7c460ef3b89c36fc002c5097