sw/qa/extras/txtexport/txtexport.cxx
@@ -10,6 +10,7 @@
 #include <swmodeltestbase.hxx>
 
 #include <osl/thread.hxx>
+#include <string>
 
 class TxtExportTest : public SwModelTestBase
 {
@@ -64,6 +65,38 @@ DECLARE_TXTEXPORT_TEST(testBullets, "bullets.odt")
     CPPUNIT_ASSERT_EQUAL(aExpected, aData);
 }
 
+DECLARE_TXTEXPORT_TEST(testTdf120574_utf8, "UTF8BOMCRLF.txt")
+{
+    SvMemoryStream aMemoryStream;
+    SvFileStream aStream(maTempFile.GetURL(), StreamMode::READ);
+    aStream.ReadStream(aMemoryStream);
+    const char* pData = static_cast<const char*>(aMemoryStream.GetData());
+
+    CPPUNIT_ASSERT_EQUAL('\xEF', pData[0]);
+    CPPUNIT_ASSERT_EQUAL('\xBB', pData[1]);
+    CPPUNIT_ASSERT_EQUAL('\xBF', pData[2]);
+
+    OUString aData = OStringToOUString(std::string_view(pData + 3, aMemoryStream.GetSize() - 3),
+                                       RTL_TEXTENCODING_UTF8);
+
+    CPPUNIT_ASSERT_EQUAL(OUString(u"フー\r\nバー\r\n"), aData);
+}
+
+DECLARE_TXTEXPORT_TEST(testTdf120574_utf16le, "UTF16LECRLF.txt")
+{
+    SvMemoryStream aMemoryStream;
+    SvFileStream aStream(maTempFile.GetURL(), StreamMode::READ);
+    aStream.ReadStream(aMemoryStream);
+
+    const char16_t* pData = static_cast<const char16_t*>(aMemoryStream.GetData());
+    const int16_t* pBom = static_cast<const int16_t*>(aMemoryStream.GetData());
+
+    CPPUNIT_ASSERT_EQUAL(static_cast<int16_t>(0xFEFF), *pBom);
+
+    OUString aData(pData + 1, aMemoryStream.GetSize() / sizeof(char16_t) - 1);
+
+    CPPUNIT_ASSERT_EQUAL(OUString(u"フー\r\nバー\r\n"), aData);
+}
 CPPUNIT_PLUGIN_IMPLEMENT();
 
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
